--- a/index.html
+++ b/index.html
@@ -231,56 +231,20 @@
 
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="images/about.jpg" alt="" />
+          <img src="images/capture 1.jpg" alt="" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, repellat.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <h4>Tracer Study</h4>
+            <p>Sistem Informasi Tracer Study jurusan Teknik Arsitektur Universitas Palangka Raya</p>
+            <a href="https://youtu.be/IPA7dlKvyAs"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
-          <img src="images/about.jpg" alt="" />
+          <img src="images/capture 2.png" alt="" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, repellat.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="images/about.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, repellat.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="images/about.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, repellat.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="images/about.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, repellat.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="images/about.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, repellat.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <h4>Adyraya Motor</h4>
+            <p>Sistem Informasi Bengkel Adyraya Motor Palangka Raya</p>
+            <a href="https://youtu.be/RJ5QfiNFiEI"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
       </div>
