--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           web, database dan berbagai macam software umum yang digunakan diperkantoran. Saya memiliki minat untuk berkembang, dan juga siap kerja dimanapun.
         </p>
         <div class="media-social">
-          <a href="https://github.com/rafifachrezzy"></a><i class='bx bxl-github'></i>
+          <a href="https://github.com/rafifachrezzy"><i class='bx bxl-github'></i></a>
           <a href="https://twitter.com/FachrezzyRafi"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.instagram.com/itsspawn._/"><i class="bx bxl-instagram-alt"></i></a>
           <a href="https://www.linkedin.com/in/rafi-fachrezzy-70034b279/"><i class="bx bxl-linkedin-square"></i></a>
